--- a/FAQ's/style.css
+++ b/FAQ's/style.css
@@ -303,6 +303,7 @@ textarea.contact-input ~ .icon {
     max-width: 100%!important;
     border-radius: 50%!important;
     object-fit: cover!important;
+    margin-bottom: 5px!important;
 }
 
 .member-name {
@@ -490,6 +491,75 @@ textarea.contact-input ~ .icon {
     color: var(--bs-heading-color);
 }
 
+/*FAQ's*/
+.qs{
+    min-height: 100vh;
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.qs .team-title{
+    font-size: 3rem;
+    margin: 2rem 0rem;
+}
+
+.faq{
+   max-width: 700px;
+   margin-top: 2rem;
+   padding-bottom: 1rem;
+   border-bottom: 2px solid #1c212b;
+   cursor: pointer;  
+}
+
+.question{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.question h3{
+    font-size: 1.8rem;   
+}
+
+.answer{
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 1.2s ease;
+}
+
+.answer p{
+    padding-top: 1rem;
+    line-height: 1.6;
+    font-size: 1.4rem;   
+}
+
+.faq.active .answer{
+    max-height: 300px;
+    animation: fade 1s ease-in-out;
+}
+
+.faq.active svg{
+    transform: rotate(180deg);
+}
+
+svg {
+    transition: transform 0.5s ease-in;
+}
+
+@keyframes fade {
+    from{
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    
+    to{
+        opacity: 1;
+        transform: translate(0px);
+    }
+}
 
 /*4K*/
 @media screen and (min-width: 2560px) {
