--- a/FAQ's/style.css
+++ b/FAQ's/style.css
@@ -560,3 +560,189 @@ svg {
         transform: translate(0px);
     }
 }
+
+/*4K*/
+@media screen and (min-width: 2560px) {
+    body {
+        font-size: 24px;
+    }
+
+    .content h1 {
+        font-size: 8rem;
+    }
+    
+    .form-wrap {
+        max-width: 100%;
+        background-color: #fff;
+        padding: 4%;
+        margin: 2rem auto;
+        border-radius: 40px;
+    }
+
+    .contact-input {
+        padding: 2rem 1.8rem calc(1rem - 2px) 1.8rem;
+        font-size: 1.6rem;
+    }
+
+    .btn {
+        padding: 1.5rem 2.5rem;
+        font-size: 1.6rem;
+    }
+
+    .team-title {
+        font-size: 7rem;
+    }
+
+    .team-grid {
+        gap: 50px;
+        max-width: 2400px;
+    }
+
+    .member-photo {
+        width: 300px;
+    }
+
+    .member-name {
+        font-size: 32px;
+    }
+
+    .member-role {
+        font-size: 24px;
+    }
+
+    .left {
+        display: grid;
+        grid-auto-columns: 1fr;
+        gap: 3rem;
+    }
+
+    .right {
+        padding: 400px;
+    }
+
+    p.text{
+        font-size: 28.4px;
+    }
+
+    .image img{
+        height: 100vh;
+    }
+}
+
+/* Mobile and Tablet View */
+@media screen and (max-width: 768px) {
+    
+    .left .image {
+        display: none;
+    }
+
+    .content h1 {
+        font-size: 3rem;
+    }
+
+    .contact-form {
+        grid-template-columns: 1fr;
+    }
+
+    .contact-buttons {
+        grid-template-columns: 1fr;
+    }
+
+    .team-grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .team-title {
+        font-size: 3rem;
+    }
+
+}
+
+/* Tablet and Above View */
+@media screen and (min-width: 769px) {
+    
+    .left .image {
+        display: block;
+    }
+
+    .content h1 {
+        font-size: 4rem;
+    }
+
+    .left {
+        grid-template-columns: 1fr;
+    }
+
+    .contact-form {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .contact-buttons {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .team-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .team-title {
+        font-size: 4rem;
+    }
+
+}
+
+/* Desktop View */
+@media screen and (min-width: 1024px) and (max-width:1399px){
+    .navbar .logo {
+        margin-left: -130px;
+    }
+
+    .content h1 {
+        font-size: 4.5rem;
+    }
+
+    .left {
+        height: 100vh;
+        width: 100vh;
+        grid-template-columns: 1fr !important;
+    }
+
+    
+    .form-wrap {
+        margin-left: 9rem;
+        margin-top: 4.5rem;
+    }
+
+    .team-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .team-title {
+        font-size: 5rem;
+    }
+
+    .right {
+        padding: 300px;
+    }
+
+    .image img{
+        display: none;
+    }
+
+    .form-wrap{
+        margin-left: auto;
+    }
+}
+
+@media screen and (min-width: 1440px){
+    .team-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+
+@media screen and (min-width: 1024px){
+    .contact {
+        overflow:initial !important;
+    }
+}
