fixed some bugs in modal of newletter

--- a/Home/Home.css
+++ b/Home/Home.css
@@ -392,6 +392,10 @@ html{
     position: relative;
     top:140vh;
 }
+.my-heightFullView{
+    position: relative;
+    top:-10vh;
+}
 .collectionContainer .grid-item {
     background-color: #f0f0f0;
     position: relative;
