--- a/Home/Header.css
+++ b/Home/Header.css
@@ -82,7 +82,7 @@ nav {
   width: 100%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(6, 12%);
+  grid-template-columns: repeat(10, 12%);
   position: absolute;
   top: 0;
   left: 0;
@@ -90,8 +90,8 @@ nav {
   visibility: hidden;
   transform: translateY(-20px);
   transition: opacity 0.3s ease, transform 0.3s ease;
-  padding: 2.8rem 0;
-  row-gap: 2rem;
+  padding: 20px 0;
+  row-gap: 1rem;
   justify-content: center;
   border-bottom: 0px solid black;
 }
@@ -113,8 +113,8 @@ nav {
 
 .imageContainer {
   border-radius: 50%;
-  height: 10rem;
-  width: 10rem;
+  height: 5rem;
+  width: 5rem;
   border: 10px solid;
   overflow: hidden;
   filter: saturate(0);
